--- a/views/booking_activities_management.erb
+++ b/views/booking_activities_management.erb
@@ -172,9 +172,7 @@
           <div class="container_12">
             <div class="grid_6">
               <input type="hidden" name="id" value="<%%=entity.id%>"/>
-
-              <%= partial :booking_activities_cyclic_turns_management %>             
-              
+              <%= partial :booking_activities_cyclic_turns_management %>
               <div class="bottom-navigation-bar navigation-bar" style="padding-right:0px">
                 <div class="navigation-bar-crud-buttons">
                   <input type="button" class="update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.update%>"/>
@@ -185,6 +183,29 @@
           </div>
           </form>
         </div>        
+        <%% } %>
+        <%% if (entity.occurence == 'multiple_dates') { %>
+        <div id="dates_tab" class="top-margin bottom-margin">
+          <%= partial :booking_activities_multiple_dates_management %>
+        </div> 
+        <%% } %>
+        <%% if (entity.occurence == 'one_time') {%>
+        <div id="date_tab" class="top-margin bottom-margin">
+          <form name="element" method="POST">
+          <div class="container_12">
+            <div class="grid_6">
+              <input type="hidden" name="id" value="<%%=entity.id%>"/>
+              <%= partial :booking_activities_one_time_management %>
+              <div class="bottom-navigation-bar navigation-bar" style="padding-right:0px">
+                <div class="navigation-bar-crud-buttons">
+                  <input type="button" class="update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.update%>"/>
+                </div>
+              </div>                
+
+            </div>
+          </div>
+          </form>
+        </div> 
         <%% } %>
         <div id="photos_tab" class="top-margin bottom-margin">
               <%= include('entity-tabs-above', {:edit_element_form_above => edit_element_form_above,
