--- a/views/reservation_activities_shopping_cart.erb
+++ b/views/reservation_activities_shopping_cart.erb
@@ -41,7 +41,7 @@
           </div>
           <div class="grid_7">
             <div class="left-margin">
-              <h4><%=activity.name%></h4>
+              <h4><%=first_shopping_cart_item.item_description%></h4>
               <div class="less_contrast_text"><%=l(first_shopping_cart_item.date,"%d %B %Y")%> <%first_shopping_cart_item.time%></div>
               <div class="top-margin">
                 <% shopping_cart_items[:items].each do |shopping_cart_item| %>
