--- a/views/_booking_menu.erb
+++ b/views/_booking_menu.erb
@@ -27,23 +27,23 @@
         <li><a href='/admin/rates/adjust-prices'><%=t.booking_console.adjust_prices%></a></li>                        
       </ul>    
    </li>    
-   <li class='<%if ['/admin/booking/new','/admin/booking/customers', '/admin/booking/bookings','/admin/booking/planning'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.bookings%></a>
+   <li class='<%if ['/admin/booking/new','/admin/booking/customers', '/admin/booking/bookings','/admin/booking/planning','/admin/booking/monthly-occupation','/admin/booking/reports/pickup-return','/admin/booking/reports/reservations','/admin/booking/reports/customers'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.bookings%></a>
       <ul>
         <li><a href='/admin/booking/customers'><%=t.booking_console.new_booking%></a></li>           
         <li><a href='/admin/booking/bookings'><%=t.booking_console.reservations%></a></li>
-        <li><a href='/admin/booking/planning'><%=t.booking_console.planning%></a></li>                                   
+        <li><a href='/admin/booking/planning'><%=t.booking_console.planning%></a></li>    
+        <li><a href='/admin/booking/reports/pickup-return'><%=t.booking_console.report_pickup_return%></a></li>
+        <li><a href='/admin/booking/monthly-occupation'><%=t.booking_console.monthly_occupation%></a></li>
+        <li><a href='/admin/booking/reports/reservations'><%=t.booking_console.report_reservations%></a></li>     
+        <li><a href='/admin/booking/reports/customers'><%=t.booking_console.report_customers%></a></li>                           
       </ul>    
    </li>   
    <% if booking_activities %>
-   <li class='<%if ['/admin/order/orders'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.activity_bookings%></a>
+   <li class='<%if ['/admin/order/orders','/admin/booking/activities-occupation','/admin/booking/activities-summary'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.activity_bookings%></a>
       <ul>   
-        <li><a href='/admin/order/orders'><%=t.booking_console.reservations%></a></li>
-      </ul>
-   </li>
-   <li class='<%if ['/admin/booking/activities-summary','/admin/booking/activities-occupation'].index(request.path)%>active <%end%>has-sub'><a href='#'>Gestión actividades</a>
-      <ul>   
-        <li><a href='/admin/booking/activities-summary'>Resumen</a></li>
+        <li><a href='/admin/order/orders'><%=t.booking_console.orders%></a></li>
         <li><a href='/admin/booking/activities-occupation'>Ocupación</a></li>
+        <li><a href='/admin/booking/activities-summary'>Listado pedidos</a></li>
       </ul>
    </li>   
    <% end %>
@@ -52,30 +52,15 @@
         <li><a href='/admin/order/information-requests'><%=t.booking_console.information_requests%></a></li>  
       </ul>
    </li>
-   <li class='<%if ['/admin/booking/reports/reservations',
-      '/admin/booking/reports/customers',
-      '/admin/booking/reports/pickup-return',
-      ].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.listing%></a>
-      <ul>
-        <li><a href='/admin/booking/reports/reservations'><%=t.booking_console.report_reservations%></a></li>
-        <li><a href='/admin/booking/reports/pickup-return'><%=t.booking_console.report_pickup_return%></a></li>           
-        <li><a href='/admin/booking/reports/customers'><%=t.booking_console.report_customers%></a></li>   
-      </ul>    
-   </li>
-   <li class='<%if ['/admin/charges','/admin/booking/reports/charges','/admin/booking/product-billing','/admin/booking/extras-billing'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.finances%></a>
+   <li class='<%if ['/admin/charges','/admin/booking/reports/charges','/admin/booking/product-billing','/admin/booking/extras-billing','/admin/booking/summary'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.finances%></a>
       <ul>
         <li><a href='/admin/charges'><%=t.booking_console.receipts%></a></li>
         <li><a href="/admin/booking/reports/charges">Listado de cobros</a></li>
         <li><a href='/admin/booking/product-billing'><%=t.booking_console.products_billing%></a></li>         
         <li><a href='/admin/booking/extras-billing'><%=t.booking_console.extras_billing%></a></li>
-      </ul>    
-   </li>
-   <li class='<%if ['/admin/booking/summary','/admin/booking/monthly-occupation'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.statistics%></a>
-      <ul>
-        <li><a href='/admin/booking/monthly-occupation'><%=t.booking_console.monthly_occupation%></a></li>          
         <li><a href='/admin/booking/summary'><%=t.booking_console.summary%></a></li>           
       </ul>    
-   </li>             
+   </li>          
    <li class='<%if ['/admin/booking/create-rates'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.utils%></a>
       <ul>
         <li><a href='/admin/booking/create-rates'><%=t.booking_console_configuration.create_rates%></a></li>           
