--- a/views/_shopping_cart_summary.erb
+++ b/views/_shopping_cart_summary.erb
@@ -20,12 +20,11 @@
 </style>
   <% @shopping_cart.shopping_cart_items_group_by_date_time_item_id.each do |idx,shopping_cart_items| %>
     <% first_shopping_cart_item = shopping_cart_items[:items].first %>
-    <% activity = ::Yito::Model::Booking::Activity.first(code:first_shopping_cart_item.item_id) %>
     <div class="activity_list_item">
       <div class="container_12">
           <div class="grid_7">
             <div class="left-margin">
-              <h4><%=activity.name%></h4>
+              <h4><%=first_shopping_cart_item.item_description%></h4>
               <div class="less_contrast_text"><%=l(first_shopping_cart_item.date,"%d %B %Y")%> <%first_shopping_cart_item.time%></div>
               <div class="top-margin">
                 <% shopping_cart_items[:items].each do |shopping_cart_item| %>
