--- a/views/reservation_activity.js.erb
+++ b/views/reservation_activity.js.erb
@@ -2,4 +2,6 @@
          <%= partial 'reservation_activity_cyclic.js'.to_sym %>
       <% elsif @activity.occurence == :one_time %>
          <%= partial 'reservation_activity_one_time.js'.to_sym %>
+      <% elsif @activity.occurence == :multiple_dates %>
+         <%= partial 'reservation_activity_multiple_dates.js'.to_sym %>      
       <% end %>
